<resources>
    <string name="app_name">Girgitton</string>
    <string name="devices_list">Devices list</string>
    <string name="search_devices">Search devices</string>
    <string name="start_search">Start search</string>
    <string name="stop_search">Stop search</string>
    <string name="control_devices">Control devices</string>
    <string name="applied_calibration">Applied calibration</string>
    <string name="devices_data">Devices data</string>

    <string name="chipTime">Chip time</string>
    <string name="accX">AccX</string>
    <string name="accY">AccY</string>
    <string name="accZ">AccZ</string>
    <string name="accM">|Acc|</string>
    <string name="asX">GyroX</string>
    <string name="asY">GyroY</string>
    <string name="asZ">GyroZ</string>
    <string name="asM">|Gyro|</string>
    <string name="angleX">AngleX</string>
    <string name="angleY">AngleY</string>
    <string name="angleZ">AngleZ</string>
    <string name="angleM">|Angle|</string>
    <string name="hX">MagX</string>
    <string name="hY">MagY</string>
    <string name="hZ">MagZ</string>
    <string name="hM">|Mag|</string>
    <string name="electricQuantityPercentage">power</string>
    <string name="t">Temp</string>
    <string name="q0">Q0</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="versionNumber">Version number</string>
    <string name="End_field_calibration">End field calibration</string>
    <string name="Start_field_calibration">Start field calibration</string>
    <string name="read_reg_03">Read register 03</string>
<!--    <string name="seans_number">Уникальный номер сеанса</string>-->
<!--    <string name="surname">Фамилия</string>-->
<!--    <string name="name">Имя</string>-->
<!--    <string name="middle">Отчество</string>-->
<!--    <string name="gender">Пол</string>-->
<!--    <string name="birth_date">Дата Рождения</string>-->
<!--    <string name="seans_date">Дата Сеанса</string>-->
<!--    <string name="action_1">Примечание 1</string>-->
<!--    <string name="action_2">Примечание 2</string>-->
<!--    <string name="action_3">Примечание 3</string>-->


    <string name="seans_number">Unikalniy nomer seansa</string>
    <string name="surname">Familiya</string>
    <string name="name">Imya</string>
    <string name="middle">Otchestvo</string>
    <string name="gender">Pol</string>
    <string name="birth_date">Data Rojdeniya</string>
    <string name="seans_date">Data Seansa</string>
    <string name="action_1">Primechanie 1</string>
    <string name="action_2">Primechanie 2</string>
    <string name="action_3">Primechanie 3</string>

</resources>