<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".db_view"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/acc_X"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/accX"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acc_Y"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/accY"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/acc_Z"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/accZ"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Time"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="426dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

</LinearLayout>