<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/username_display_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:text="Name" />

                <Button
                    android:id="@+id/btn_log_out"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:text="Add User" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_devices"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/startSearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_search" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/stopSearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop_search" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/control_devices"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/appliedCalibrationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/applied_calibration" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/startFieldCalibrationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Start_field_calibration" />

                    <Button
                        android:id="@+id/endFieldCalibrationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/End_field_calibration" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/readReg03Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/read_reg_03" />
                </LinearLayout>

                <TextView
                    android:id="@+id/db_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Base ga Ma'lumotlarni Yozish"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/sp_names"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ac_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Action 1: "
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                    <EditText
                        android:id="@+id/action_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Action 1"
                        android:inputType="text" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ac_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Action 2: "
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                    <EditText
                        android:id="@+id/action_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Action 2"
                        android:inputType="text" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ac_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Action 3: "
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                    <EditText
                        android:id="@+id/action_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="Action 3"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ma'lumot hajmini tanlang: "
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                    <EditText
                        android:id="@+id/column_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="qator soni"
                        android:inputType="number" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#4CAF50"
                        android:text="START" />

                </LinearLayout>

                <!--            <Button-->
                <!--                android:id="@+id/btn_db_view"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:backgroundTint="#393939"-->
                <!--                android:text="Data Base ni ko'rish" />-->

                <Button
                    android:id="@+id/btn_delete_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9C27B0"
                    android:text="Data Base ni Tozalash" />

                <Button
                    android:id="@+id/export_excel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Export to Excel" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/devices_data"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deviceDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Data"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>